<resources>
    <string name="app_name">FindWork</string>
    <string name="title_search">Поиск</string>
    <string name="title_favorite">Избранное</string>
    <string name="title_response">Отклики</string>
    <string name="title_messages">Сообщения</string>
    <string name="title_profile">Профиль</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>