<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/search"
        android:title="@string/title_search" />

    <item
        android:id="@+id/navigation_favorite"
        android:icon="@drawable/favorite"
        android:title="@string/title_favorite" />

    <item
        android:id="@+id/navigation_response"
        android:icon="@drawable/response"
        android:title="@string/title_response" />

    <item
        android:id="@+id/navigation_messages"
        android:icon="@drawable/messages"
        android:title="@string/title_messages" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/profile"
        android:title="@string/title_profile" />


</menu>