<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_login">

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.example.findwork.ui.search.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_search_to_navigation_detailVacancy"
            app:destination="@id/navigation_detailVacancy" />
    </fragment>

    <fragment
        android:id="@+id/navigation_favorite"
        android:name="com.example.findwork.ui.favorite.FavoriteFragment"
        android:label="@string/title_favorite"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_response"
        android:name="com.example.findwork.ui.response.ResponseFragment"
        android:label="@string/title_response"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_messages"
        android:name="com.example.findwork.ui.messages.MessagesFragment"
        android:label="@string/title_messages"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.findwork.ui.profile.ProfileFragment"
        android:label="@string/title_messages"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_login"
        android:name="com.example.findwork.ui.login.LoginFragment"
        tools:layout="@layout/fragment_login" >
        <action
            android:id="@+id/action_navigation_login_to_navigation_search"
            app:destination="@id/navigation_search" />
        <action
            android:id="@+id/action_navigation_login_to_navigation_password"
            app:destination="@id/navigation_password" />
    </fragment>

    <fragment
        android:id="@+id/navigation_password"
        android:name="com.example.findwork.ui.password.PasswordFragment"
        tools:layout="@layout/fragment_password" >
        <action
            android:id="@+id/action_navigation_login_to_navigation_search"
            app:destination="@id/navigation_search" />
    </fragment>

    <fragment
        android:id="@+id/navigation_detailVacancy"
        android:name="com.example.findwork.ui.vacancy.detail.DetailVacancyFragment"
        android:label="detailed vacany"
        tools:layout="@layout/fragment_detail_vacancy" />




</navigation>